...
  @override
  Widget build(BuildContext context) {
    return Column(
      children: [
        // Campo Usuario
        TextField(
          key: Key('inputUsuario'),
          controller: usuario,
          style: const TextStyle(color: Colors.white), // 🔹 texto blanco
          decoration: _input('Usuario', Icons.person),
        ),
        const SizedBox(height: 16),

        // Campo Contraseña
        TextField(
          key: Key('inputPassword'),
          controller: clave,
          style: const TextStyle(color: Colors.white), // 🔹 texto blanco
          obscureText: _obscureText,
          decoration: _input('Contraseña', Icons.lock).copyWith(
            suffixIcon: IconButton(
              icon: Icon(
...
        const SizedBox(height: 24),

        // Botón Iniciar Sesión
        SizedBox(
          width: double.infinity,
          child: ElevatedButton(
            key: Key('btnLogin'),
            style: _buttonStyle(),
            onPressed: () async {
              /*
              String nombre = usuario.text.trim();
              String password = clave.text.trim();

...
