...
class Ahorcado {
  final int id;
  final String palabra;
  final String pista;
  final String codigo_exa;

  Ahorcado({
    required this.id,
    required this.palabra,
    required this.pista,
    required this.codigo_exa,
  });

...
